tests/ported/snapshots/tests__ported__c_tests__sample_no_columns_timespan.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaTimeSpan",
        value: TimeSpan(12300),
      ),
    ],
    columns: [],
  ),
  table_slices: [],
)
